Avoid using width stretch

--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ h6 {
 
 .page-header {
   justify-self: center;
-  width: stretch;
+  width: 100%;
   max-width: var(--page-width);
   padding-inline: var(--page-padding-inline);
   padding-block: var(--page-padding-block);
@@ -121,7 +121,7 @@ h6 {
 
 .page-main {
   justify-self: center;
-  width: stretch;
+  width: 100%;
   max-width: var(--page-width);
   padding-block: var(--page-padding-block);
 }
